<resources>
    <string name="app_name">MagramApp</string>
    <string name="refresh">Refresh</string>
    <string name="addres">Address</string>
    <string name="kumparan">Kumparan</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="teguh_ananda_permana">Teguh Ananda Permana</string>
    <string name="name">Name</string>
    <string name="thumbnail">thumbnail</string>
    <string name="photo">Photo</string>
</resources>