<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarUserDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="User Detail"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarUserDetail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="25dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/tvUserNameDetailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/teguh_ananda_permana"
                android:clickable="true"
                android:textColor="#686868"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/tvEmailDetailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="blabla@gmail.com"
                android:clickable="true"
                android:textColor="#686868"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/tvCompanyDetailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/kumparan"
                android:clickable="true"
                android:textColor="#686868"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/addres"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/tvAddressDetailUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="kumparan"
                android:clickable="true"
                android:textColor="#686868"
                android:textSize="18sp"
                android:focusable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="Album"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="12dp"/>

            <Spinner
                android:id="@+id/albumUseer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlbumPhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>